--- a/src/components/MovieDetail/style.scss
+++ b/src/components/MovieDetail/style.scss
@@ -117,6 +117,15 @@
   }
 }
 
+.loading{
+  padding: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  color: #fff;
+}
+
 //responsive
 @media (max-width: 600px) {
   .global-image {
